# the-downloader

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  cliff.toml  git_provider.py  pyproject.toml
src/downloader/: callback.py  downloader.py  logger.py  task.py  utils.py
src/downloader/provider/: aria2.py  base.py  curl.py  pycurl.py  requests.py  wget.py
src/the_downloader/: __init__.py  callback.py  constants.py  downloader.py  error.py  http_session.py  logger.py  task.py  types.py
src/the_downloader/provider/: __init__.py  aria2.py  base.py  curl.py  pycurl.py  requests.py  wget.py
src/the_downloader/utils/: file_utils.py  metadata_utils.py
