# cSpell:ignoreRegExp .*
[project]
name = "the-downloader"
version = "0.1.1"
description = "Multi-provider download library with progress tracking and concurrent download support"
authors = [{ name = "cupang-afk", email = "pixelview56@gmail.com" }]
dependencies = ["requests>=2.32.5", "certifi>=2026.2.25"]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
pycurl = ["pycurl>=7.45.7"]

[dependency-groups]
dev = ["ruff>=0.15.2"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.pdm]
distribution = true

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = [
    "B",   # bugbear
    "C90", # mccabe
    "D",   # pydocstyle
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "I",   # isort
    "N",   # pep8-naming
    "PL",  # pylint
    "PTH", # flake8-use-pathlib
    "RUF", # ruff-specific rules
    "SIM", # simplify
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
]
fixable = ["ALL"]

ignore = [
    "D100", # missing-module-docstring
    "D105", # missing-magic-method-docstring
    "D203", # one-blank-line-before-class (conflicts with D211)
    "D212", # multi-line-summary-first-line (allow flexibility)
]
[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = "dynamic"
line-ending = "lf"
